# bevy_boids

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml  release.yaml
src/: main.rs  voxel.rs
