[package]
name = "bevy_boids"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15", features = ["wayland", "trace"] }
rand = "0.8.5"
# Unofficial Bevy book recommends using the "pure" feature for the blake3 crate when cross-compiling 
# from Linux to Windows if using MSVC. I'm using GNU, but still ran into problems. Enabling
# the feature didn't work, so I have to use the CARGO_FEATURE_PURE environment variable.
# See: https://bevy-cheatbook.github.io/setup/cross/linux-windows.html
#
#    `> CARGO_FEATURE_PURE=1 cargo run --release --target x86_64-pc-windows-gnu`
# blake3 = { version = "1.5.5", features = ["pure"] }

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
